--- a/resources/css/pages/_footer.scss
+++ b/resources/css/pages/_footer.scss
@@ -1,4 +1,7 @@
 .footer{
+  .grid-4{
+    gap: 0;
+  }
   a{
     font-size: 0.875rem;
   }
@@ -8,8 +11,17 @@
   h6{
     margin-bottom: 20px;
   }
+  &__box{
+    padding: 20px;
+  }
   &__social{
+    padding: 20px;
     grid-column: span 2;
+    border-right: 2px solid $dark;
+    border-left: 2px solid $dark;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     #arrow{
       transition: .2s;
     }
@@ -32,6 +44,9 @@
     }
   }
   &__copy{
+    &.border{
+      border-top: 0px solid $dark;
+    }
     p{
       text-align: center;
     }
