--- a/resources/css/pages/_footer.scss
+++ b/resources/css/pages/_footer.scss
@@ -32,6 +32,7 @@
       opacity: 1;
     }
     li{
+      margin: auto 0;
       &:hover{
         #arrow{
           transform: translateY(-1.5px) translateX(1.5px);
@@ -42,6 +43,9 @@
         }
       }
     }
+    .grid-3{
+      gap: 20px 40px;
+    }
   }
   &__copy{
     &.border{
@@ -49,6 +53,7 @@
     }
     p{
       text-align: center;
+      padding: 10px 0;
     }
   }
 }
