--- a/resources/css/tools/_typo.scss
+++ b/resources/css/tools/_typo.scss
@@ -12,11 +12,11 @@
 
   // H2
   @if $size == h2 and $device == desktop {
-      font-size: 2.5rem !important;
-      line-height: 3.75rem;
-  } @else if $size == h2 and $device == mobile {
-      font-size: 2rem;
-      line-height: 3rem;
+      font-size: 1.5rem !important;
+      line-height: 120%;
+    } @else if $size == h2 and $device == mobile {
+      font-size: 1.5rem;
+      line-height: 120%;
   }
 
   // H3
@@ -57,10 +57,10 @@
 
   // p
   @else if $size == p and $device == desktop {
-      font-size: 1.125rem;
+      font-size: 1rem;
       line-height: 140%;
   } @else if $size == p and $device == mobile {
-      font-size: 1.125rem;
+      font-size: 1rem;
       line-height: 2rem;
   }
 
