--- a/resources/css/utilities/_buttons.scss
+++ b/resources/css/utilities/_buttons.scss
@@ -1,8 +1,31 @@
+.btns {
+  display: flex;
+  gap: 20px;
+}
+
 .btn {
   font-size: 1.25rem !important;
   line-height: 120% !important;
   font-weight: 700;
   text-decoration: none;
+  border: 2px solid $dark;
+  box-shadow: 3px 3px 0px 0px $dark;
+  padding: 10px;
+  transition: .2s;
+}
+
+.btn-pri{
+  background: #4C6EFE;
+  &:hover{
+    box-shadow: 0px 0px 0px 0px $dark;
+  }
+}
+
+.btn-sec{
+  background: $white;
+  &:hover{
+    box-shadow: 0px 0px 0px 0px $dark;
+  }
 }
 
 .link{
