--- a/resources/css/generic/_reset.scss
+++ b/resources/css/generic/_reset.scss
@@ -30,6 +30,10 @@ img {
 	object-fit: cover;
 }
 
+span, input, label{
+  font-family: $font-pri;
+}
+
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
