--- a/resources/css/utilities/_buttons.scss
+++ b/resources/css/utilities/_buttons.scss
@@ -12,20 +12,18 @@
   box-shadow: 3px 3px 0px 0px $dark;
   padding: 10px;
   transition: .2s;
+  &:hover{
+    transform: translateY(-1.5px);
+    box-shadow: 0px 0px 0px 0px $dark;
+  }
 }
 
 .btn-pri{
-  background: #4C6EFE;
-  &:hover{
-    box-shadow: 0px 0px 0px 0px $dark;
-  }
+  background: $color-pri;
 }
 
 .btn-sec{
   background: $white;
-  &:hover{
-    box-shadow: 0px 0px 0px 0px $dark;
-  }
 }
 
 .link{
