--- a/resources/css/utilities/_flex.scss
+++ b/resources/css/utilities/_flex.scss
@@ -1,3 +1,8 @@
+.center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .flex-column {
 	display: flex;
 	flex-direction: column;
