--- a/resources/css/utilities/_general.scss
+++ b/resources/css/utilities/_general.scss
@@ -1,7 +1,7 @@
 .container {
 	max-width: $container-xl;
 	margin: 0 auto;
-	// border: 2px solid red;
+	border: 2px solid red;
 }
 
 .ul {
@@ -12,6 +12,16 @@
   border: 2px solid $dark;
 }
 
-.index{
+.border-card{
+  border: 2px solid $dark;
+  box-shadow: 3px 3px 0px 0px $dark;
+}
+
+.bg-pattern{
   background-color: #F4F0E3;
+  background-image: var(--icon-url);
+}
+
+.bg-white{
+  background-color: $white;
 }
