--- a/resources/css/generic/_reset.scss
+++ b/resources/css/generic/_reset.scss
@@ -40,3 +40,32 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
+// BARRA DE SCROLL
+// Chrome // Edge
+::-webkit-scrollbar {
+  width: 1rem; /* Largura da barra de rolagem */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $dark;
+}
+
+::-webkit-scrollbar-track {
+  border-left: 2px solid $dark;
+  background-color: $white;
+}
+
+/* Firefox */
+::-moz-scrollbar {
+  width: 1rem;
+}
+
+::-moz-scrollbar-thumb {
+  border-left: 2px solid $dark;
+  background-color: $white;
+}
+
+::-moz-scrollbar-track {
+  background-color: $white;
+}
