--- a/resources/css/pages/sections/_hero.scss
+++ b/resources/css/pages/sections/_hero.scss
@@ -7,6 +7,7 @@
   h2{
     font-weight: 400;
     margin: 20px 0;
+    font-size: 1.5rem !important;
     a{
       font-size: 1.5rem;
       &:hover{
@@ -20,6 +21,11 @@
   &__txt{
     p{
       width: 70%;
+    }
+  }
+  &__img {
+    img{
+      width: 100%;
     }
   }
 }
