--- a/resources/css/utilities/_general.scss
+++ b/resources/css/utilities/_general.scss
@@ -1,7 +1,7 @@
 .container {
 	max-width: $container-xl;
 	margin: 0 auto;
-	border: 2px solid red;
+	// border: 2px solid red;
 }
 
 .ul {
@@ -15,6 +15,10 @@
 .border-card{
   border: 2px solid $dark;
   box-shadow: 3px 3px 0px 0px $dark;
+}
+
+.border-bottom{
+  border-bottom: 2px solid $dark;
 }
 
 .bg-pattern{
