--- a/resources/css/tools/_typo.scss
+++ b/resources/css/tools/_typo.scss
@@ -64,6 +64,15 @@
       line-height: 2rem;
   }
 
+  // p-2
+  @else if $size == p-2 and $device == desktop {
+    font-size: 1.125rem;
+    line-height: 140%;
+} @else if $size == p-2 and $device == mobile {
+    // font-size: 1.125rem;
+    // line-height: 2rem;
+}
+
   // a
   @else if $size == a1 and $device == desktop {
       font-size: 1.125rem;
