--- a/resources/css/pages/sections/_features.scss
+++ b/resources/css/pages/sections/_features.scss
@@ -2,6 +2,7 @@
   &__cards{
     display: flex;
     li{
+      background-color: $background;
       padding: 20px;
       gap: 20px;
       border-right: 2px solid $dark;
