FEAT: section skills in home html/css (desktop)

--- a/resources/css/pages/_index.scss
+++ b/resources/css/pages/_index.scss
@@ -4,4 +4,5 @@
 @import 'sections/projects';
 @import 'sections/features';
 @import 'sections/testimonials';
+@import 'sections/skills';
 @import 'admin/login';
