--- a/resources/css/pages/sections/_skills.scss
+++ b/resources/css/pages/sections/_skills.scss
@@ -1,14 +1,13 @@
 .skills{
-  padding-bottom: 60px;
+  padding: 60px 40px;
   article{
     padding: 40px 0
   }
   .h2{
-    margin-bottom: 60px;
+    margin-bottom: 40px;
   }
   .h4{
     font-size: 2rem;
-    font-weight: 700;
   }
   &__txt{
     margin-right: 160px;
@@ -34,6 +33,22 @@
       &::after{
         content: ";";
       }
+    }
+  }
+  @include responsive(m){
+    &__txt{
+      margin-right: 0;
+    }
+    &__list{
+      &.grid-2{
+        gap: 20px;
+      }
+    }
+  }
+  @include responsive(s){
+    padding: 60px 20px;
+    &__txt{
+      margin-right: 0;
     }
   }
 }
