FEAT: init styles page admin

--- a/resources/css/pages/_index.scss
+++ b/resources/css/pages/_index.scss
@@ -5,4 +5,5 @@
 @import 'sections/features';
 @import 'sections/testimonials';
 @import 'sections/skills';
+@import 'admin/admin';
 @import 'admin/login';
