FEAT: modal js and html

--- a/resources/css/utilities/_typo.scss
+++ b/resources/css/utilities/_typo.scss
@@ -2,6 +2,10 @@
   text-transform: uppercase;
 }
 
+.bold{
+  font-weight: 700;
+}
+
 .bold-italic{
   font-weight: 700 !important;
   font-style: italic !important;
