--- a/resources/css/settings/_colors.scss
+++ b/resources/css/settings/_colors.scss
@@ -4,3 +4,10 @@ $dark: #000;
 $color-pri: #EA5C5C;
 $background: #F4F0E3;
 $grey: #aaa;
+
+$custom-colors: (
+  color1: #9CD3FF,
+  color2: #864FCC,
+  color3: #EA5C5C,
+  color4: #FFDE68
+);
