--- a/resources/css/pages/sections/_features.scss
+++ b/resources/css/pages/sections/_features.scss
@@ -7,7 +7,12 @@
       gap: 20px;
       border-right: 2px solid $dark;
     }
+    p{
+      font-size: 1.25rem;
+      text-wrap: nowrap;
+    }
     span{
+      font-size: 1.75rem;
       padding: 10px;
     }
   }
