--- a/resources/css/pages/sections/_hero.scss
+++ b/resources/css/pages/sections/_hero.scss
@@ -38,6 +38,11 @@
     h1{
       font-size: 4.5rem !important;
     }
+    &__img {
+      .absolute{
+        left: 70%;
+      }
+    }
   }
   @include responsive(s){
     padding: 120px 20px;
@@ -55,6 +60,11 @@
       p{
         width: 100%;
         line-height: 140%;
+      }
+    }
+    &__img {
+      .absolute{
+        left: 70%;
       }
     }
   }
