--- a/resources/css/pages/_index.scss
+++ b/resources/css/pages/_index.scss
@@ -1,5 +1,6 @@
 @import 'header';
 @import 'footer';
+@import '404';
 @import 'sections/hero';
 @import 'sections/projects';
 @import 'sections/features';
