--- a/resources/css/pages/admin/_admin.scss
+++ b/resources/css/pages/admin/_admin.scss
@@ -7,7 +7,10 @@
     padding: 40px 0 10px 0;
     ul{
       display: flex;
-      gap: 20px;
+      gap: 40px;
+    }
+    .active{
+      font-weight: 700;
     }
   }
 
@@ -38,6 +41,16 @@
       font-size: 1.125rem !important;
       // text-transform: uppercase;
     }
+  }
+
+  &__content{
+    .ul{
+      display: none;
+      &.active{
+        display: block;
+      }
+    }
+
   }
   @include responsive(m){
     padding: 0 20px;
