--- a/resources/css/utilities/_general.scss
+++ b/resources/css/utilities/_general.scss
@@ -1,16 +1,16 @@
 .container{
 	max-width: $container-xl;
 	margin: 0 auto;
-	border: 2px solid red;
-  @include responsive(m){
-    border: 2px solid greenyellow;
-  }
-  @include responsive(sm){
-    border: 2px solid blue;
-  }
-  @include responsive(s){
-    border: 2px solid tomato;
-  }
+	// border: 2px solid red;
+  // @include responsive(m){
+  //   border: 2px solid greenyellow;
+  // }
+  // @include responsive(sm){
+  //   border: 2px solid blue;
+  // }
+  // @include responsive(s){
+  //   border: 2px solid tomato;
+  // }
 }
 
 .secao{
