FEAT: placeholders in create's

--- a/resources/css/pages/admin/_admin.scss
+++ b/resources/css/pages/admin/_admin.scss
@@ -75,8 +75,8 @@
       margin: 20px 0;
     }
     input, textarea, button, select{
-      min-width: 500px;
-      max-width: 800px;
+      width: 500px;
+      max-width: 500px;
     }
   }
 
