FIX: melhorias ux and responsive

--- a/resources/css/pages/_footer.scss
+++ b/resources/css/pages/_footer.scss
@@ -19,6 +19,7 @@
     padding: 20px;
     ul a{
       position: relative;
+      z-index: -1;
       &:hover{
         &::before{
           left: -10px;
