--- a/resources/css/pages/admin/_admin.scss
+++ b/resources/css/pages/admin/_admin.scss
@@ -1,10 +1,11 @@
 .admin{
   min-height: 600px;
   .secao{
-    padding: 20px 0;
+    padding: 20px;
   }
   &__nav{
     padding: 40px 0 10px 0;
+    margin: 0 20px;
     ul{
       display: flex;
       gap: 40px;
