--- a/resources/css/pages/sections/_testimonials.scss
+++ b/resources/css/pages/sections/_testimonials.scss
@@ -6,6 +6,15 @@
   li{
     background-color: $white;
     padding: 20px;
+    height: fit-content;
+    &:hover{
+      img{
+        filter: none;
+      }
+    }
+  }
+  &__logo{
+    max-height: 70px;
   }
   &__profile{
     display: flex;
@@ -16,6 +25,10 @@
       width: 50px;
       height: 50px;
       border-radius: 50px;
+      transition: filter .3s ease;
+
+      filter: grayscale(100%);
+      filter: gray;
     }
     p{
       font-weight: 700;
@@ -24,6 +37,7 @@
   }
   &__depo{
     margin: 40px 0;
+    font-size: 0.875rem;
   }
   @include responsive(s){
     padding: 120px 20px;
