FEAT: melhorias header desktop and mobile

--- a/resources/css/components/_index.scss
+++ b/resources/css/components/_index.scss
@@ -1,4 +1,5 @@
 @import 'form';
 @import 'modal';
+@import 'header-admin';
 @import 'animations/animations';
 @import 'animations/scroll-horizontal';
