--- a/resources/css/pages/sections/_hero.scss
+++ b/resources/css/pages/sections/_hero.scss
@@ -3,7 +3,7 @@
   h1{
     font-size: 6.25rem !important;
     font-weight: 400;
-    letter-spacing: -9px;
+    letter-spacing: -8px;
   }
   h2{
     font-weight: 400;
@@ -28,6 +28,11 @@
     margin-top: 20px;
   }
   &__txt{
+    h2{
+      a{
+        text-decoration: underline;
+      }
+    }
     p{
       width: 70%;
     }
@@ -56,7 +61,9 @@
   @include responsive(s){
     padding: 120px 20px;
     h1{
-      font-size: 3rem !important;
+      font-size: 4.5rem !important;
+      letter-spacing: -5px;
+      text-align: center;
     }
     h2{
       margin: 20px 0;
