--- a/resources/css/components/_index.scss
+++ b/resources/css/components/_index.scss
@@ -1,5 +1,7 @@
-@import 'form';
-@import 'modal';
+@import 'header';
 @import 'header-admin';
+@import 'modal';
+@import 'footer';
+@import 'form';
 @import 'animations/animations';
 @import 'animations/scroll-horizontal';
