FEAT: melhorias api

--- a/resources/css/pages/_index.scss
+++ b/resources/css/pages/_index.scss
@@ -1,6 +1,7 @@
 @import 'header';
 @import 'footer';
 @import '404';
+@import 'lol';
 @import 'sections/hero';
 @import 'sections/projects';
 @import 'sections/features';
